# smartspeech-unimrcp

./: .bazelrc  .gitignore  CHECK.md  CMakeLists.txt  Makefile  README.md  WORKSPACE
cmake/: FindgRPC.cmake
contrib/: CMakeLists.txt
docker/: Dockerfile.runner
grpc_client/: CMakeLists.txt  client.cpp  client.hpp  token_resolver.cpp  token_resolver.hpp
package/: build-plugins.sh  smartspeech-plugins-config.xml  speak.xml  start-unimrcp.sh
plugin/: CMakeLists.txt  smartspeech-recognition-demo.c  smartspeech-synthesis-demo.c
recognition/: CMakeLists.txt  channel.cpp  channel.hpp  cimpl.cpp  engine.cpp  engine.hpp
synthesis/: CMakeLists.txt  channel.cpp  channel.hpp  cimpl.cpp  engine.cpp  engine.hpp
